# sqlx-postgres

./: Cargo.toml  readme.md
migrations/: 20230719125647_create_todos_table.sql  20230719134948_add_description_column.sql
src/: main.rs
